--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Módulo | HTML5-CSS3-JS</title>
+    <!-- Defino Hojas de estilo y script -->
     <link rel="stylesheet" href="./css/css.css" type="text/css">
     <link rel="stylesheet" href="./css/grid.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="./css/font-awesome.css" type="text/css">
     <script src="./js/jquery-3.2.1.js"></script>
+    <!-- Script de jQuery -->
     <script>
         $(document).ready(function(){
+            // Función para mostrar y ocultar el campo de comentarios, si se elige la opción otros.
             $('#v_contacto').on('change', function() {
                 if (this.value == "otros"){
                     $("#otros-comentario").show();
@@ -18,6 +21,7 @@
                     $("#otros-comentario").hide();
                 }
             });
+            // Función que al hacer hover sobre el elemento, carga las animaciones
             $('#quien-soy').hover(function () {
                 $('#js-progreso').addClass('js-Animacion');
                 $('#php-progreso').addClass('php-Animacion');
@@ -25,10 +29,11 @@
                 $('#css3-progreso').addClass('css-Animacion');
                 $('#me').addClass('me-Animacion');
             });
+            // Función que al hacer hover sobre el elemento, carga las animaciones
             $('#estudios').hover(function () {
                 $('#contenedor-estudios-padre').addClass('estudios-Animacion');
             });
-
+            // Función que añade una barra superior en el elemento en el que se posiciona el ratón en la barra de navegación
             var elemento;
             $(".navbar-item").mouseenter(function(){
                 elemento = this.id;
@@ -38,7 +43,7 @@
                 elemento = this.id;
                 $('#'+ elemento).children('div').removeClass('estado');
             });
-
+            // Función para hacer smooth scroll
             var hash;
             $("a").on('click', function(event) {
 
@@ -51,21 +56,21 @@
                         window.location.hash = hash;
                     });
                 }
-
             });
-
         });
     </script>
-
-
 </head>
 <body>
+
+    <!-- Defino el Header -->
     <header class="header col-12" id="inicio">
     <h1 class="title">WCB</h1>
     <div class="title-img"> </div>
     <p class="title-cite">No te asustes de lo que veas !!
     </p>
     </header>
+
+    <!-- Barra de navegación -->
     <nav class="navbar navbar-border col-12 container ">
         <ul class="navbar-list">
             <li class="navbar-item " id="n1">
@@ -94,8 +99,11 @@
             </li>
         </ul>
     </nav>
+
+    <!-- Sección contenedora -->
     <main class="container clearfix" >
 
+        <!-- Sección Quién soy -->
         <section class="col-12" id="quien-soy" >
             <div>
                 <p class="cabecera-seccion">QUIÉN SOY</p>
@@ -148,6 +156,7 @@
             </div>
         </section>
 
+        <!-- Sección Estudios -->
         <section class="col-12 section-container2" id="estudios">
             <div>
                 <p class="cabecera-seccion">ESTUDIOS</p>
@@ -208,6 +217,7 @@
             </div>
         </section>
 
+        <!-- Sección Trabajos -->
         <section class="col-12 section-container" id="trabajos">
             <div>
                 <p class="cabecera-seccion">TRABAJOS REALIZADOS</p>
@@ -245,6 +255,7 @@
             </div>
         </section>
 
+        <!-- Sección Contacto -->
         <section class="col-12 section-container2" id="contacto">
             <div>
                 <p class="cabecera-seccion">CONTACTO</p>
@@ -311,6 +322,7 @@
 
         </section>
 
+        <!-- Sección Tareas -->
         <section class="row section-container" id="tareas">
             <div id="tarea">
                 <p class="cabecera-seccion">TAREAS</p>
@@ -343,6 +355,8 @@
         </section>
 
     </main>
+
+    <!-- Sección footer -->
     <footer class="footer">
     <div class="datos-contacto">
         <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span><span class="span-derecho"><a href="mailto:wence74@gmail.com?Subject=Contacto" target="_top">wence74@gmail.com</a></span>
@@ -355,13 +369,12 @@
     </div>
 
 </footer>
+
+    <!-- Script -->
     <script src="./js/ajax.js"></script>
     <script src="./js/form.js"></script>
     <script src="./js/funciones.js"></script>
     <script src="./js/contarPalabras.js"></script>
-
-
-
 
 </body>
 </html>
